...
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintTop_toBottomOf="@id/filter_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/albumsRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            tools:listitem="@layout/album_item"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
...
